--- a/proposal-formatter.html
+++ b/proposal-formatter.html
@@ -77,7 +77,7 @@
     <textarea id="raw" rows="15" cols="75" oninput="runApp()" onchange="runApp()"></textarea>
     <p>2. Select Superblock period:</p>
     <select id="superblocks" onselect="format()"></select>
-    <p>Formatted:</p>
+    <p>3. Copy formatted summary:</p>
     <div id="formatted"></div>
 
 
